--- a/src/App/style/global.scss
+++ b/src/App/style/global.scss
@@ -8,6 +8,10 @@
   font-family: Roboto, serif;
 }
 
+.root {
+  height: 100vh;
+}
+
 body {
   color: $font-color;
 }
